--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,19 @@
+
+__pycache__/
+*.pyc
+
+# Database
+db.sqlite3
+*.sqlite3
+
 # Virtual environment
 venv/
-env/
-
-# Python cache
-__pycache__/
-*.py[cod]
-
-# Django database
-db.sqlite3
+.env
 
 # Logs
 *.log
 
-# VS Code settings
-.vscode/
-
-# OS files
+# System files
 .DS_Store
 Thumbs.db
-
-# Environment variables
-.env
 
